--- a/_posts/2017-09-18-js-bibao.markdown
+++ b/_posts/2017-09-18-js-bibao.markdown
@@ -18,7 +18,7 @@ tags:
 * 对变量提升的理解
 
 * this几种不同的使用场景
-* 创建10个<a>标签，点击时弹出对应序号
+* 创建10个```<a>```标签，点击时弹出对应序号
 
 * 对作用域和作用域链的理解
 
@@ -194,7 +194,7 @@ F2(f1)    //100
   }.bind({y:200})
   fn2('zhangsan',20)
 ```
-### 3.创建10个<a>标签，点击时弹出对应序号
+### 3.创建10个 ```<a>```标签，点击时弹出对应序号
 ##### 仔细体会
 ```js
 var i
