--- a/_posts/2017-9-15-readtonorth-2015.markdown
+++ b/_posts/2017-9-15-readtonorth-2015.markdown
@@ -9,7 +9,7 @@ tags:
     - 生活
 ---
 
-> “租房子一定要找有地铁的，挤公交真的很痛苦. ”
+> “来自BigBangBro的不成熟的小建议. ”
 
 
 <p id = "build"></p>
@@ -24,4 +24,10 @@ tags:
 《冬日笔记》 保罗奥斯特
 与必然事实相对的偶然事实，这个早上你望向镜子，意识到整个人都是偶然的，只有一项必然的事实除外：或早或晚，生命会告终。
 
+《生死桥》 李碧华
+繁花盛级 只属刹那风光
+缘尽花残 不枉几度哀荣
+一如《霸王别姬》的婊子有情且戏子有义，终归是有意难平。
 
+《乞力马扎罗的雪》 海明威
+于我而言，海明威写得最好的是他的短篇。雪山上的豹子，河边垂钓的人，咖啡厅中的长者...他们会与你道尽沧桑。
