--- a/_posts/2017-9-15-readtonorth-2015.markdown
+++ b/_posts/2017-9-15-readtonorth-2015.markdown
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "冬日阅读指北"
-subtitle:   " \"来自BigBangBro的不成熟的小建议\""
+subtitle:  
 date:       2018-1-20 23:43:32
 author:     "BigBangBro"
 header-img: "img/post-bg-2015.jpg"
