--- a/_posts/2017-12-20-hello-2015 .markdown
+++ b/_posts/2017-12-20-hello-2015 .markdown
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "流水杂记"
+title:      "离开校园"
 subtitle:   " \"Hello World, Hello GuangZhou\""
 date:       2017-12-29 23:03:30
 author:     "BigBangBro"
