--- a/_posts/2018-5-15- .markdown
+++ b/_posts/2018-5-15- .markdown
@@ -15,7 +15,7 @@ tags:
 <p id = "build"></p>
 ---
 
+[该文档为加密内容!!](http://bigbangbro.com/ "返回主页")
 
-
-[内容已被作者加密!!](http://bigbangbro.com/ "加密内容")
+The content has been encrypted by the author!!
 
